# rns-meshcore-interface

./: .gitignore  MeshCoreInterface.py  README.md  pyproject.toml
examples/: reticulum_config_example.ini
src/rns_meshcore_interface/: airtime.py  chunking.py  interface.py  transport.py
tests/: test_airtime.py  test_chunking.py  test_interface.py  test_transport.py
